--- a/www/index.html
+++ b/www/index.html
@@ -53,20 +53,21 @@
                 <h1>Atea</h1>
             </div><!-- /header -->
             
-            <ul data-role="listview">
-                    <li data-theme="e" style="text-align: center">
-                        <a href="#previousEvents">
-                            Previous events
-                        </a>
-                    </li>
-                    <li data-theme="b" style="text-align: center">
-                        <a href="#upcoomingEvents">
-                            Upcooming events
-                        </a>
-                    </li>
-                </ul>
-            <div id="lists">
-            </div>    
+            <div data-role="collapsible" data-theme="c" data-inset="false">
+                <h3>Previous events</h3>
+                <div style="margin:0; padding: 0;" class="lists">
+
+                </div>
+            </div><!-- /collapsible -->
+            <div data-role="collapsible" data-theme="a" data-inset="false">
+                <h3>Upcoming events</h3>
+                <div style="margin:0; padding: 0;" class="lists">
+
+                </div>
+            </div><!-- /collapsible -->
+
+
+
             <div id="footer" data-role="footer" data-id="footer" data-position="fixed">
                 <div class="menu-btn">&#9776; Menu</div>
             </div><!-- /footer -->
@@ -99,6 +100,7 @@
         <script type="text/javascript" src="js/collections/events.js"></script>
         <script type="text/javascript" src="js/views/event.js"></script>
         <script type="text/javascript" src="js/views/events.js"></script>
+        <script type="text/javascript" src="js/routers/main.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
