--- a/www/index.html
+++ b/www/index.html
@@ -40,19 +40,19 @@
     <body>
         <nav class="pushy pushy-left">
             <ul>
-                <li><a href="#">Item 1</a></li>
-                <li><a href="#">Item 2</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#login">Login</a></li>
                 <li><a href="#">Item 3</a></li>
                 <li><a href="#">Item 4</a></li>
                 <li><a href="#">Item 5</a></li>
                 <li><a href="#">Item 6</a></li>
             </ul>
         </nav>
-        <div data-role="page" id="home" style="background: url(img/ateabg.png);">
+        <div data-role="page" class="push-page" id="home" style="background: url(img/ateabg.png);">
             <div data-role="header" style="overflow:hidden;">
                 <h1>Atea</h1>
             </div><!-- /header -->
-            
+
             <div data-role="collapsible" data-theme="c" data-inset="false">
                 <h3>Previous events</h3>
                 <div style="margin:0; padding: 0;" class="lists">
@@ -68,12 +68,105 @@
 
 
 
+
             <div id="footer" data-role="footer" data-id="footer" data-position="fixed">
-                <div class="menu-btn">&#9776; Menu</div>
+                    <a href="#" data-icon="bars" data-theme="e" class="menu-btn">Menu</a>
+                    <a href="#login" data-icon="user" data-theme="a" class="ui-btn-right username">Login</a>
+             </div><!-- /footer -->
+        </div>
+        <div data-role="page" id="login" class="push-page" style="background: url(img/ateabg.png);">
+            <div data-role="header" style="overflow:hidden;">
+                <h1>Atea</h1>
+            </div><!-- /header -->
+
+            <input type="text" id="email" name="text-basic" placeholder="example@hotmail.com"  value="">
+
+            <input type="text" id="password" name="text-basic" placeholder="password"  value="">
+            <a href="#" data-transition="pop" data-theme="g" class="ui-shadow ui-btn" onClick="login();">Login</a>
+            <a href="#sign-up" data-theme="g" class="ui-shadow ui-btn">Sign Up</a>
+
+            <a id="message" href="#popupBasic" data-rel="popup" style="visibility: hidden;" class="ui-shadow ui-btn" data-transition="pop">Basic Popup</a>
+            <div data-role="popup" id="popupBasic">
+                <p>Error don't correct.</p>
+            </div>
+
+            <div id="login_footer" data-role="footer" data-id="footer" data-position="fixed">
+                <a href="#" data-icon="bars" data-theme="e" class="menu-btn">Menu</a>
+            </div><!-- /footer -->
+        </div>
+        <div data-role="page" id="selectedEvent" class="push-page" style="background: url(img/ateabg.png);">
+            <div data-role="header" style="overflow:hidden;">
+                <h1>Atea</h1>
+            </div><!-- /header -->
+
+            <div class="ui-grid-a">
+                <div class="ui-block-a" style="height:100px">Schedule</div>
+            </div><!-- /grid-a -->
+
+            <div class="ui-grid-a" data-theme="e">
+                <div class="ui-block-a"><div class="ui-bar ui-bar-a" style="height:100px"><span style="height:100px" class="ui-btn ui-shadow ui-btn-icon-left ui-icon-video"></span></div></div>
+                <div class="ui-block-b"><div class="ui-bar ui-bar-a" style="height:100px"><span style="height:100px" class="ui-btn ui-shadow ui-btn-icon-left ui-icon-bullets"></span></div></div>
+            </div><!-- /grid-a -->
+            <div class="ui-grid">
+                <div class="ui-block"><div class="ui-bar ui-bar" style="height:100px"><span style="height:100px" class="ui-btn ui-shadow ui-btn-icon-left ui-icon-video"> Maps</span></div></div>
+            </div><!-- /grid-a -->
+
+            <div data-role="footer" data-id="footer" data-position="fixed">
+                <a href="#" data-icon="bars" data-theme="e" class="menu-btn">Menu</a>
+            </div><!-- /footer -->
+        </div>
+        <div data-role="page" id="program_activity_list" class="push-page" style="background: url(img/ateabg.png);">
+            <div data-role="header" style="overflow:hidden;">
+                <h1>Atea</h1>
+            </div><!-- /header -->
+
+            <ul data-role="listview" data-theme="e" data-filter="true" data-inset="true">
+                <li data-role="list-divider">Mail</li>
+                <li><a href="#">Inbox</a></li>
+                <li><a href="#">Outbox</a></li>
+                <li data-role="list-divider">Contacts</li>
+                <li><a href="#">Friends</a></li>
+            </ul>
+
+            <div data-role="footer" data-id="footer" data-position="fixed">
+                <a href="#" data-icon="bars" data-theme="e" class="menu-btn">Menu</a>
+            </div><!-- /footer -->
+        </div>
+        <div data-role="page" id="partner_list" class="push-page" style="background: url(img/ateabg.png);">
+            <div data-role="header" style="overflow:hidden;">
+                <h1>Atea</h1>
+            </div><!-- /header -->
+
+            <ul data-role="listview" data-filter="true" data-filter-placeholder="Search partner..." data-inset="true">
+                <li><a href="#">Atea</a></li>
+                <li><a href="#">Cisco</a></li>
+                <li><a href="#">Dataline</a></li>
+                <li><a href="#">E-systems</a></li>
+            </ul>
+
+            <div data-role="footer" data-id="footer" data-position="fixed">
+                <a href="#" data-icon="bars" data-theme="e" class="menu-btn">Menu</a>
+            </div><!-- /footer -->
+        </div>
+        <div data-role="page" id="sign-up" class="push-page" style="background: url(img/ateabg.png);">
+            <div data-role="header" style="overflow:hidden;">
+                <h1>Atea</h1>
+            </div><!-- /header -->
+
+            <input type="text" id="s_email" name="text-basic" placeholder="example@hotmail.com"  value="">
+
+            <input type="text" id="s_password" name="text-basic" placeholder="password"  value="">
+            <input type="text" id="s_r_password" name="text-basic" placeholder="repeat-password"  value="">
+            <a href="#" data-theme="g" class="ui-shadow ui-btn" onClick="signUp();">Sign Up</a>
+
+
+
+            <div id="sign-up_footer" data-role="footer" data-id="footer" data-position="fixed">
+                <a href="#" data-icon="bars" data-theme="e" class="menu-btn">Menu</a>
             </div><!-- /footer -->
         </div>
         <script type="text/template" id="event_template">
-            <a href="#">
+            <a href="#selectedEvent">
                             <div class="ui-grid-a">
                                 <div class="ui-block-a">
                                     <div style="height:60px">
@@ -87,12 +180,26 @@
                                         <p><%= endDate %></p>
                                     </div>
                                 </div>
-                            </div><!-- /grid-a -->
-                        </a>
-                    
+                            </div>
+            </a>
+
         </script>
+        <script id="footer_template" type="text/template">
+            <div data-role="footer" data-id="footer" data-position="fixed">
+                <a href="#" data-icon="bars" data-theme="e" class="menu-btn">Menu</a>
+                <a href="#login" data-icon="user" data-theme="a" class="ui-btn-right"><%= name %></a>
+            </div><!-- /footer -->
+        </script>>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript">
+            $.ajaxPrefilter( function( options, originalOptions, jqXHR ) {
+                options.xhrFields = {
+                    withCredentials: true
+                };
+
+            });
+        </script>
         <script type="text/javascript" src="js/lib/jquery.mobile-1.4.2.js"></script>
         <script type="text/javascript" src="js/lib/underscore.js"></script>
         <script type="text/javascript" src="js/lib/backbone.js"></script>
@@ -101,11 +208,141 @@
         <script type="text/javascript" src="js/views/event.js"></script>
         <script type="text/javascript" src="js/views/events.js"></script>
         <script type="text/javascript" src="js/routers/main.js"></script>
+        <script type="text/javascript" src="js/jquery.cookie.js"></script>
+        <script type="text/javascript" src="js/models/user.js"></script>
+        <script type="text/javascript" src="js/views/home.js"></script>
         <script type="text/javascript">
             app.initialize();
         </script>
 
         <script src="js/pushy.js"></script>
+
+        <script type="text/javascript">
+            function login() {
+
+                var email = $('#email').val();
+                var password = $('#password').val();
+                var sid = 0;
+                $.ajax({
+                    type: "POST",
+                    dataType: "json",
+                    url: "http://localhost:2403/users/login",
+                    data: {username: email, password: password},
+                    xhrFields: {
+                        withCredentials: true
+                    },
+                    complete: function(xhr, textStatus) {
+                        console.log(textStatus);
+                        //console.log(xhr);
+                        var resultObj = jQuery.parseJSON(xhr.responseText);
+                        console.log(resultObj.uid);
+                        if(resultObj.uid) {
+                            console.log(resultObj);
+                            sid = resultObj.id;
+                            app.User = new app.Models.User({ name: email, password: password, id: resultObj.uid });
+                        } else {
+                            $('#message').trigger('click');
+                            //alert("Don't correct login");
+                        }
+                    }
+                });
+
+
+                $.ajax({
+                    type: "GET",
+                    dataType: "json",
+                    url: "http://localhost:2403/users/me",
+                    xhrFields: {
+                        withCredentials: true
+                    },
+                    complete: function(xhr, textStatus) {
+                        console.log(textStatus);
+                        //console.log(xhr);
+                        var resultObj = jQuery.parseJSON(xhr.responseText);
+                        if(resultObj) {
+                            console.log(resultObj);
+                        } else {
+                            $('#message').trigger('click');
+                            //alert("Don't correct login");
+                        }
+                    }
+                });
+
+            };
+
+            function signUp(){
+
+                var email = $('#s_email').val();
+                var passwordOne = $('#s_password').val();
+                var passwordTwo = $('#s_r_password').val();
+                if(passwordOne === passwordTwo){
+
+                } else {
+                    alert('Some message !!!');
+                }
+            };
+            function test(){
+                $.ajax({
+                    type: "GET",
+                    dataType: "json",
+                    url: "http://localhost:2403/events",
+                    xhrFields: {
+                        withCredentials: true
+                    },
+                    complete: function(xhr, textStatus) {
+                        console.log(textStatus);
+                        console.log(xhr);
+
+                    }
+                });
+
+                return;
+            }
+        </script>
+        <script type="text/javascript">
+
+
+            $( "#home" ).on( "pageshow", function( event ) {
+
+                console.log('Home page !!!');
+
+                $.ajax({
+                    url: 'http://188.226.184.59/congressomulti/api/event/list',
+                    type: 'GET',
+                    dataType: 'json',
+                    data: {username: "superadmin", password: "123456"},
+                    success: function(data, textStatus, jqXHR) {
+                        /* do stuff with data*/
+                        console.log(jqXHR);
+                        //$('#result .data').html(data);
+                    },
+                    beforeSend: function (xhr) {
+                        xhr.setRequestHeader("PHP_AUTH_USER","superadmin");
+                        xhr.setRequestHeader("PHP_AUTH_PW","123456");
+                    },
+                    complete: function(jqXHR, textStatus) {
+                        /* do other stuff */
+                        //$('#result .text').text(jqXHR);
+                        //$('#result .text').text(textStatus);
+                    }
+                });
+
+                if(app.User){
+                    var view = new app.Views.Footer({ model: app.User });
+                    console.log('ok !!!!');
+                    $('.username').html(app.User.get('name'));
+                    console.log(view.el);
+                } else {
+                    var user = new User({ name: 'login' });
+                    var login_view = new app.Views.Footer({ model: user });
+                    console.log('hello !!!');
+                    console.log(login_view.el);
+                }
+            });
+            $( "#login" ).on( "pagebeforeload", function( event ) {
+                console.log('Message !!!');
+            });
+        </script>
 
     </body>
 </html>
