--- a/www/tpl/main-layout.html
+++ b/www/tpl/main-layout.html
@@ -3,6 +3,6 @@
 </div><!-- /header -->
 
 <div data-role="footer" data-id="footer" data-position="fixed">
-    <a href="#" data-icon="bars" data-theme="e" >Menu</a>
+    <a href="#" data-icon="bars" class="menu-btn" data-theme="e" >Menu</a>
     <a href="#login" data-icon="user" data-theme="a" class="ui-btn-right username">Login</a>
 </div><!-- /footer -->
