--- a/www/tpl/login-p.html
+++ b/www/tpl/login-p.html
@@ -1,8 +1,12 @@
+<div class="title-bar">
+	Login
+</div>
+
 <input type="text" id="email" name="text-basic" placeholder="example@hotmail.com"  value="">
 
-<input type="text" id="password" name="text-basic" placeholder="password"  value="">
-<a href="#" data-transition="pop" data-theme="g" class="ui-shadow ui-btn" onClick="login();">Login</a>
-<a href="#sign-up" data-theme="g" class="ui-shadow ui-btn">Sign Up</a>
+<input type="password" id="password" name="text-basic" placeholder="password"  value="">
+
+<a href="#" data-transition="pop" id="login-btn" class="ui-shadow ui-btn" onClick="login();">Login</a>
 
 <a id="message" href="#popupBasic" data-rel="popup" style="visibility: hidden;" class="ui-shadow ui-btn" data-transition="pop">Basic Popup</a>
 <div data-role="popup" id="popupBasic">
