--- a/www/tpl/main-layout.html
+++ b/www/tpl/main-layout.html
@@ -1,8 +1,10 @@
-<div data-role="header" style="overflow:hidden;">
-     <h1>Atea</h1>
+<div data-role="header" id="header">
+	<div class="logo"></div>
 </div><!-- /header -->
 
-<div data-role="footer" data-id="footer" data-position="fixed">
-    <a href="#" data-icon="bars" class="menu-btn" data-theme="e" >Menu</a>
-    <a href="#login" data-icon="user" data-theme="a" class="ui-btn-right username">Login</a>
+<div id="content"></div>
+
+<div data-role="footer" id="footer" data-position="fixed">
+    <a href="#" data-icon="bars" class="menu-btn ui-btn-left" data-theme="e" data-role="none">Menu</a>
+    <a href="#login" data-icon="user" data-theme="a" class="ui-btn-right username login-btn" data-role="none">Login</a>
 </div><!-- /footer -->
