--- a/www/index.html
+++ b/www/index.html
@@ -1,44 +1,27 @@
 <!DOCTYPE html>
-<!--
-    Licensed to the Apache Software Foundation (ASF) under one
-    or more contributor license agreements.  See the NOTICE file
-    distributed with this work for additional information
-    regarding copyright ownership.  The ASF licenses this file
-    to you under the Apache License, Version 2.0 (the
-    "License"); you may not use this file except in compliance
-    with the License.  You may obtain a copy of the License at
-
-    http://www.apache.org/licenses/LICENSE-2.0
-
-    Unless required by applicable law or agreed to in writing,
-    software distributed under the License is distributed on an
-    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
-     KIND, either express or implied.  See the License for the
-    specific language governing permissions and limitations
-    under the License.
--->
 <html>
     <head>
         <meta charset="utf-8" />
         <meta name="format-detection" content="telephone=no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/jquery.mobile.flatui.css" />
+
+		<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.css" />
+		<link rel="stylesheet" type="text/css" href="css/jquery.mobile.squareui.css" />
 
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/demo.css">
-        <!-- Pushy CSS -->
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="stylesheet" href="css/pushy.css">
-        <link rel="stylesheet" href="css/less/buttons.css">
-        <!-- jQuery -->
+
+		<!-- jQuery -->
         <script src="js/lib/jquery-1.11.0.js"></script>
 
-        <title>World</title>
+        <title>Congresso</title>
     </head>
     <body>
 
     <script type="text/javascript" src="cordova.js"></script>
-    <script type="text/javascript" src="js/index.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript">
         $.ajaxPrefilter( function( options, originalOptions, jqXHR ) {
             options.xhrFields = {
@@ -65,7 +48,7 @@
     </script>
 
     <script type="text/javascript" src="js/collections/events.js"></script>
-    <script type="text/javascript" src="js/jquery.cookie.js"></script>
+    <script type="text/javascript" src="js/lib/jquery.cookie.js"></script>
     <script type="text/javascript" src="js/models/user.js"></script>
 
     <script type="text/javascript">
