--- a/www/tpl/first-event-list-p.html
+++ b/www/tpl/first-event-list-p.html
@@ -5,7 +5,7 @@
     </div>
 </div><!-- /collapsible -->
 
-<div data-role="collapsible" data-theme="a" data-inset="false">
+<div data-role="collapsible" data-theme="a" data-inset="false" data-collapsed="false">
     <h3>Upcoming events</h3>
     <div style="margin:0; padding: 0;" class="lists">
 
