* Code refactored + More styles + Homescreen added.

--- a/www/tpl/page-login.html
+++ b/www/tpl/page-login.html
@@ -8,7 +8,7 @@
 	<input type="password" id="password" name="text-basic" placeholder="Password"  value="">
 </form>
 
-<a href="#" data-transition="pop" id="login-btn" class="ui-btn ui-btn-big minus-side-margin" onClick="login();">Submit</a>
+<a href="#" data-transition="pop" id="login-btn" class="ui-btn ui-btn-lg minus-side-margin" onClick="login();">Submit</a>
 
 <a id="message" href="#popupBasic" data-rel="popup" style="visibility: hidden;" class="ui-shadow ui-btn" data-transition="pop">Basic Popup</a>
 <div data-role="popup" id="popupBasic">
