--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
     </script>
 
     <!-- Libs -->
-    <script type="text/javascript" src="js/lib/jquery.mobile-1.4.2.js"></script>
+    <!--<script type="text/javascript" src="js/lib/jquery.mobile-1.4.2.js"></script>-->
     <script type="text/javascript" src="js/lib/underscore.js"></script>
     <script type="text/javascript" src="js/lib/backbone.js"></script>
     <!-- Libs -->
