--- a/www/index.html
+++ b/www/index.html
@@ -20,13 +20,6 @@
 
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/app.js"></script>
-        <script type="text/javascript">
-            $.ajaxPrefilter( function( options, originalOptions, jqXHR ) {
-                options.xhrFields = {
-                    withCredentials: true
-                };
-            });
-        </script>
 
         <!-- Libs -->
         <script type="text/javascript" src="js/lib/jquery.mobile-1.4.2.js"></script>
@@ -61,6 +54,7 @@
         <!-- Views -->
         <script type="text/javascript" src="js/views/event.js"></script>
         <script type="text/javascript" src="js/views/events.js"></script>
+        <script type="text/javascript" src="js/views/eventList.js"></script>
         <script type="text/javascript" src="js/views/layout.js"></script>
         <script type="text/javascript" src="js/views/home.js"></script>
         <script type="text/javascript" src="js/views/menu.js"></script>
