--- a/www/tpl/event-list-item.html
+++ b/www/tpl/event-list-item.html
@@ -1,4 +1,4 @@
-<a href="#events/<%= id %>">
+<a href="#home/<%= id %>">
     <div class="ui-grid-a">
         <div class="ui-block-a">
             <div>
