--- a/www/index.html
+++ b/www/index.html
@@ -66,8 +66,10 @@
         <script type="text/javascript" src="js/views/menu.js"></script>
         <script type="text/javascript" src="js/views/login.js"></script>
         <script type="text/javascript" src="js/views/qa.js"></script>
+        <script type="text/javascript" src="js/views/partner.js"></script>
         <script type="text/javascript" src="js/views/partnersList.js"></script>
         <script type="text/javascript" src="js/views/partnersPage.js"></script>
+        <script type="text/javascript" src="js/views/partnerDetails.js"></script>
         <!-- Views -->
 
         <script type="text/javascript" src="js/router.js"></script>
