--- a/www/tpl/partner-details.html
+++ b/www/tpl/partner-details.html
@@ -8,4 +8,4 @@
 
 <textarea cols="40" rows="20" placeholder="Comment ..."></textarea>
 
-<a href="#" data-transition="pop" data-theme="g" class="ui-shadow ui-btn">Submit</a>
+<button data-transition="pop" data-theme="g" class="ui-shadow ui-btn">Submit</button>
