--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@
         <script type="text/javascript" src="js/views/events.js"></script>
         <script type="text/javascript" src="js/views/eventList.js"></script>
         <script type="text/javascript" src="js/views/layout.js"></script>
-        <script type="text/javascript" src="js/views/home.js"></script>
+        <script type="text/javascript" src="js/views/eventPage.js"></script>
         <script type="text/javascript" src="js/views/menu.js"></script>
         <script type="text/javascript" src="js/views/login.js"></script>
         <script type="text/javascript" src="js/views/qa.js"></script>
@@ -65,6 +65,7 @@
         <!-- Views -->
 
         <script type="text/javascript" src="js/router.js"></script>
+        <script type="text/javascript" src="js/auth.js"></script>
     </head>
     <body>
     </body>
