--- a/www/tpl/menu.html
+++ b/www/tpl/menu.html
@@ -1,8 +1,13 @@
 <ul>
-	<li><a href="#events">Home</a></li>
+	<li><a href="#home">Home</a></li>
+
+	<% if (window.App.Auth.isGuest) { %>
 	<li><a href="#login">Login</a></li>
-	<li><a href="#qa">QA</a></li>
-	<li><a href="#">Item 4</a></li>
-	<li><a href="#">Item 5</a></li>
-	<li><a href="#">Item 6</a></li>
+	<% } else{ %>
+	<li><a href="#profile">My Profile</a></li>
+	<% } %>
+
+	<% if (!window.App.Auth.isGuest) { %>
+	<li><a href="#logout">Logout</a></li>
+	<% } %>
 </ul>
