--- a/www/tpl/page-login.html
+++ b/www/tpl/page-login.html
@@ -3,14 +3,9 @@
 </div>
 
 <form id="login-form" class="with-padding bg-green-20 minus-side-margin">
-	<input type="text" id="email" name="text-basic" placeholder="Email"  value="">
+	<input type="text" id="email" name="email" placeholder="Email"  value="">
 
-	<input type="password" id="password" name="text-basic" placeholder="Password"  value="">
+	<input type="password" id="password" name="password" placeholder="Password" value="">
 </form>
 
 <a href="#" data-transition="pop" id="login-btn" class="ui-btn ui-btn-lg minus-side-margin" onClick="login();">Submit</a>
-
-<a id="message" href="#popupBasic" data-rel="popup" style="visibility: hidden;" class="ui-shadow ui-btn" data-transition="pop">Basic Popup</a>
-<div data-role="popup" id="popupBasic">
-    <p>Email or password is not correct.</p>
-</div>
