Add Activity list

--- a/www/tpl/event-list-item.html
+++ b/www/tpl/event-list-item.html
@@ -1,12 +1,12 @@
-<a href="#events/<%= id %>">
-    <div class="ui-grid-a">
-        <div class="ui-block-a">
+<a href="#events/<%= id %>" class="navigate-right container">
+    <div class="row">
+        <div class="col-xs-6">
             <div>
                 <h2><%= eventName %></h2>
                 <p><%= location %></p>
             </div>
         </div>
-        <div class="ui-block-b">
+        <div class="col-xs-6">
             <div>
                 <h2><%= startDate %></h2>
                 <p><%= endDate %></p>
