--- a/www/tpl/page-login.html
+++ b/www/tpl/page-login.html
@@ -1,5 +1,5 @@
 <div class="title-bar">
-	Login
+    <%= polyglot.t('Login') %>
 </div>
 
 <form id="login-form" class="with-padding bg-green-20 minus-side-margin">
@@ -8,4 +8,4 @@
 	<input type="password" id="password" name="password" placeholder="Password" value="">
 </form>
 
-<a href="#" data-transition="pop" id="login-btn" class="ui-btn ui-btn-lg minus-side-margin" onClick="login();">Submit</a>
+<a href="#" data-transition="pop" id="login-btn" class="ui-btn ui-btn-lg minus-side-margin"><%= polyglot.t('Submit') %></a>
