--- a/www/index.html
+++ b/www/index.html
@@ -5,12 +5,12 @@
         <meta name="format-detection" content="telephone=no" />
         <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-
-		<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.4.2.css" />
-		<link rel="stylesheet" type="text/css" href="css/jquery.mobile.squareui.css" />
+        <link rel="stylesheet" href="css/bootstrap.min.css">
 
         <link rel="stylesheet" href="css/normalize.css">
+
         <link rel="stylesheet" href="css/styles.css">
+
         <link rel="stylesheet" href="css/pushy.css">
 
 		<!-- jQuery -->
@@ -19,13 +19,19 @@
         <title>Congresso</title>
 
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/app.js"></script>
 
         <!-- Libs -->
-        <script type="text/javascript" src="js/lib/jquery.mobile-1.4.2.js"></script>
         <script type="text/javascript" src="js/lib/underscore.js"></script>
         <script type="text/javascript" src="js/lib/backbone.js"></script>
+        <script type="text/javascript" src="js/lib/bootstrap.js"></script>
+        <script type="text/javascript" src="js/lib/ratchet.js"></script>
         <!-- Libs -->
+
+        <script type="text/javascript" src="js/lib/polyglot.js"></script>
+        <script type="text/javascript" src="js/app.js"></script>
+        <script type="text/javascript" src="js/router.js"></script>
+        <script type="text/javascript" src="js/auth.js"></script>
+
 
         <!-- Components -->
         <script type="text/javascript" src="js/components/view.js"></script>
@@ -35,18 +41,14 @@
         <script type="text/javascript" src="js/models/event.js"></script>
         <script type="text/javascript" src="js/models/user.js"></script>
         <script type="text/javascript" src="js/models/partner.js"></script>
+        <script type="text/javascript" src="js/models/activity.js"></script>
         <!-- Models -->
 
-        <script src="js/utils.js"></script>
-        <script type="text/javascript">
-            $(document).ready(function () {
-                window.App.run();
-            });
-        </script>
 
         <!-- Collections -->
         <script type="text/javascript" src="js/collections/events.js"></script>
         <script type="text/javascript" src="js/collections/partners.js"></script>
+        <script type="text/javascript" src="js/collections/activities.js"></script>
         <!-- Collections -->
 
         <script type="text/javascript" src="js/lib/jquery.cookie.js"></script>
@@ -64,10 +66,17 @@
         <script type="text/javascript" src="js/views/partnersList.js"></script>
         <script type="text/javascript" src="js/views/partnersPage.js"></script>
         <script type="text/javascript" src="js/views/partnerDetails.js"></script>
+        <script type="text/javascript" src="js/views/activity.js"></script>
+        <script type="text/javascript" src="js/views/activities.js"></script>
+        <script type="text/javascript" src="js/views/activitiesPage.js"></script>
+        <script type="text/javascript" src="js/views/collapsible.js"></script>
+        <script type="text/javascript" src="js/views/activityInfo.js"></script>
         <!-- Views -->
 
-        <script type="text/javascript" src="js/router.js"></script>
-        <script type="text/javascript" src="js/auth.js"></script>
+        <script type="text/javascript">
+            App.run();
+        </script>
+
     </head>
     <body>
     </body>
