--- a/www/tpl/menu.html
+++ b/www/tpl/menu.html
@@ -1,13 +1,13 @@
 <ul>
-	<li><a href="#home">Home</a></li>
+	<li><a href="#home"><%= polyglot.t('Home') %></a></li>
 
-	<% if (window.App.Auth.isGuest) { %>
-	<li><a href="#login">Login</a></li>
+	<% if (window.App.Auth.isGuest()) { %>
+	<li><a href="#login"><%= polyglot.t('Login') %></a></li>
 	<% } else{ %>
-	<li><a href="#profile">My Profile</a></li>
+	<li><a href="#profile"><%= polyglot.t('My profile') %></a></li>
 	<% } %>
 
-	<% if (!window.App.Auth.isGuest) { %>
-	<li><a href="#logout">Logout</a></li>
+	<% if (!window.App.Auth.isGuest()) { %>
+	<li><a href="#logout"><%= polyglot.t('Logout') %></a></li>
 	<% } %>
 </ul>
