--- a/www/tpl/partner-list-item.html
+++ b/www/tpl/partner-list-item.html
@@ -1,3 +1,3 @@
-<a href="http://localhost:8000/index.html#partner/<%= id %>">
+<a href="http://localhost:8000/index.html#partner/<%= id %>" class="navigate-right">
     <%= name %>
 </a>
